[gd_scene load_steps=3 format=3 uid="uid://kp72sxgh6y1h"]

[ext_resource type="Script" uid="uid://25knip87hfwn" path="res://MainMenu.gd" id="1_mainmenu"]
[ext_resource type="Texture2D" uid="uid://c077rmyh77pxo" path="res://Assets/1.png" id="2_sud0c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_sud0c")

[node name="MenuPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -280.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -240.0
offset_right = 300.0
offset_bottom = -190.0
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 36
text = "CV Accessory Overlay"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -190.0
offset_right = 300.0
offset_bottom = -160.0
theme_override_colors/font_color = Color(0.6, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "AI-Powered Face Detection System"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -483.0
offset_top = 196.0
offset_right = -283.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Start Detection"

[node name="GuideButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = 196.0
offset_right = -23.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Guide"

[node name="CreditButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = 196.0
offset_right = 237.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Credits"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 297.0
offset_top = 196.0
offset_right = 497.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Exit"

[node name="Footer" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -15.0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "UDP Streaming â€¢ Real-time Processing"
horizontal_alignment = 1
